tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-unexpected-close-bracket/expected.err
Error: unexpected token ']'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-unexpected-close-bracket/input.k65:3:1 ]
   │
 3 │ ] = 0x1234
   │ ┬  
   │ ╰── here
   │ 
   │ Help: remove or fix this token
───╯
